[package]
name = "csi-types"
version = "0.1.0"
authors = ["Sergey Mishin <sergei.a.mishin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2.11"