[package]
name = "recv_csi"
version = "0.1.0"
authors = ["Sergey Mishin <sergei.a.mishin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
ctrlc = "3"
crossbeam = "0.7.3"
exitfailure = "0.5.1"
reqwest = { version = "0.10", default-features=false, features = ["blocking"] }
structopt = "0.3.14"
serde_cbor = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bincode = "1.2.1"
csi-types = { path = "./csi-types" }